Notes on interferometry, whistler waves

--- a/content/notes/UWAA556/ch02-4.md
+++ b/content/notes/UWAA556/ch02-4.md
@@ -673,9 +673,13 @@ There are three topographical types of wave normal surfaces:
 
 <p align="center"> <img alt="wave-normal-types.png" src="/r/img/556/wave-normal-types.png" /> </p> 
 
+We really only care about the topographical properties of the wave normal surface, since the topographical properties remain unchanged within a region of the CMA diagram. The exact values aren't nearly as useful.
+
 #### Spheroid
 
-Example: fast and slow waves
+If \\( P \\) and \\( S \\) have the same sign, then \\( u \neq 0 \\) everywhere in the volume. Since \\( u \\) can not go to \\( \infty \\) within the volume, \\( u \\) must be real everywhere. Topographically, this is a spheroid. We don't make any distinction between prolate and oblate spheroids; spheroids simply have a real, non-zero \\( u \\) for every angle \\( \theta \\).
+
+**Example: fast and slow waves**
 
 Applying the approximation \\( \omega_{ci} \ll \omega_{ce} \\)
 
@@ -689,10 +693,19 @@ Applying the approximation \\( \omega_{ci} \ll \omega_{ce} \\)
 
 Since \\( u_R > u_L	\\) everywhere in the region, the wave normal surfaces will be nested spheroids with the R-wave surface surrounding the L-wave surface.
 
-#### Dumbbell Lemniscoid
+#### Lemniscoids
 
-#### Wheel Lemniscoid
+If \\( P/S < 0 \\), then at least one branch has \\( u \rightarrow 0 \\) at the resonance angle \\( \theta_{res} \\) and its complement at all points within the volume. The cross generated near \\( u = 0 \\) by these angles when rotated about the axis of symmetry forms a pair of cones touching vertex to vertex. If \\( u \\) is real inside the cone, then the wave normal surface is a dumbbell lemniscoid. If it is real outside the cone, then we have a wheel lemniscoid.
 
+Wave normal surfaces are not allowed to intersect, since two solutions to the dispersion relation can only coincide at \\( \theta = 0  \\) or \\( \theta = \pi / 2 \\). In general, there are two solutions for \\( u \\). If \\( P / S > 0 \\), then there can only be spheroids.
+
+If we examine the dispersion relation in the vicinity of a resonance \\( \theta_{res} \\) where \\( A = 0 \\), we can eliminate the \\( n^4 \\) term in the dispersion relation and get the remaining solution
+
+{{< katex display >}}
+u^2 \sim \frac{B}{C} \sim \frac{S^2 + D^2 \cos ^2 \theta}{RLS}
+{{< /katex >}}
+
+where we've used \\( \sin ^2 \theta \sim (- P / S) \cos ^2 \theta \\). The solution is nonzero within any volume, so it represents a spheroid. If \\( P / S < 0 \\), then the second solution, if it has a real \\( u \\), is a spheroid. Again, because the wave normal surfaces are not allowed to intersect, the spheroid must enclose the lemniscoid.
 
 ## CMA Diagram
 
@@ -707,12 +720,37 @@ Each line is a cutoff or resonance, except the line at \\( RL = PS \\) where the
 - If there is a resonance \\( n \rightarrow \infty \\) inside a bounded volume, then everywhere else in that bounded volume there exist resonance angles \\( \theta \\) corresponding to the same resonance. That is because \\( P / S \\) can not change sign within a bounded volume.
 - For any angle \\( \theta \\) where \\( n \neq 0 \\) or \\( \infty \\), then only one branch will be either real or imaginary. There is no transition from cut-off to not-cut-off
 - The wave normal surface is symmetric about the magnetic axis and \\( \theta = \pi/2 \\)
-- Classes of solutions can only coincide where \\( \theta = 0, \pi/2 \\) or \\( RL = PS \\)
+- Classes of solutions can only coincide where \\( \theta = 0, \pi/2 \\) or \\( RL = PS \\), where the O, L, and R waves have equivalent dispersion .
 
 There are three topological possibilities for wave-normal surfaces in the CMA diagram.
 
 1) \\( v_\phi \neq 0 \\) for all angles \\( \theta \\) (wave exists for all \\( \theta \\)). Then the wave-normal diagram is roughly spherical
 2) \\( P / S < 0> \\), so there is a solution \\( \tan ^2 \theta = - P / S \\). Then the resonance angle defines a cone about the magnetic axis. Propagation will either be allowed everywhere inside the cone, or everywhere outside the cone.
+
+When we talk about locations in the CMA diagram, we usually use the Allis factors \\( X \\) and \\( Y \\)
+
+{{< katex display >}}
+R = 1 - \frac{X}{Y + \mu} + \frac{X}{Y - 1}
+{{< /katex >}}
+{{< katex display >}}
+L = 1 + \frac{X}{Y - \mu} - \frac{X}{Y + 1}
+{{< /katex >}}
+
+{{< katex display >}}
+P = 1 - \frac{X}{\mu} - X
+{{< /katex >}}
+
+where
+
+{{< katex display >}}
+X = \frac{\omega_{pe}^2}{\omega ^2}
+{{< /katex >}}
+{{< katex display >}}
+Y = \frac{\omega_{ce}}{\omega}
+{{< /katex >}}
+{{< katex display >}}
+\mu = \frac{m_i}{Z m_e}
+{{< /katex >}}
 
 ## Phase and Group Velocities
 
@@ -799,3 +837,201 @@ v_g = \pdv{\omega}{k} = \frac{2 c^2 k ^2 \omega_{ce} }{\omega_{pe}^2} = 2 v _\ph
 {{< /katex >}}
 
 
+### Propagation of Whistler Waves
+
+To see the direction of the group velocity for Whistler waves, we consider the approximate dispersion relation for an arbitrary propagation angle \\( \theta \\), in the intermediate frequency range \\( \omega_{ci} \ll \omega \ll \omega_{ce} \sim \omega_{pe} \\),
+
+{{< katex display >}}
+S = \frac{\epsilon_{xx}}{\epsilon_0} = 1 - \frac{\omega_{pe}^2}{\omega ^2 - \omega_{ce}^2} - \frac{\omega_{pi}^2}{\omega ^2 - \omega_{ci}^2} \approx  1 + \frac{\omega_{pe}^2}{\omega_{ce}^2}
+{{< /katex >}}
+
+{{< katex display >}}
+D = \frac{\omega_{pi}^2 \omega_{ci}}{\omega (\omega _{ci}^2 - \omega^2)} - \frac{\omega_{pe}^2 \omega_{ce}}{\omega (\omega _{ce}^2 - \omega^2)} \approx - \frac{\omega_{pe}^2}{\omega \omega_{ce}}
+{{< /katex >}}
+
+{{< katex display >}}
+P = 1 - \frac{\omega_{pi}^2 + \omega_{pe}^2}{\omega ^2} \approx - \frac{\omega_{pe}^2}{\omega^2}
+{{< /katex >}}
+
+So roughly, we have an ordering
+
+{{< katex display >}}
+|P| \gg |D| \gg |S|
+{{< /katex >}}
+
+Because \\( P \\) is so much larger, any \\( E_z \\) will dominate the behavior, and we will just get the behavior of an electrostatic wave, so we let \\( E_z \rightarrow 0 \\) and consider just the x-y behavior:
+
+{{< katex display >}}
+\det\begin{bmatrix}
+
+S - n^2 \cos ^2 \theta & -i D  \\
+i D & S - n^2 
+\end{bmatrix} = 0
+{{< /katex >}}
+
+{{< katex display >}}
+\rightarrow S^2 - S (n^2 + n^2 \cos ^2 \theta) + n^4 \cos ^2 \theta = D^2
+{{< /katex >}}
+
+If \\( \theta \neq \pi / 2 \\), noting that \\( |S| \ll |D| \\) it reduces to
+
+{{< katex display >}}
+n^4 \cos ^2 \theta = D^2
+{{< /katex >}}
+
+Using \\( n = c / (\omega / k) \\) and \\( D = \omega_{pe}^2/(\omega \omega_{ce}) \\),
+
+{{< katex display >}}
+\frac{\omega_{pe}^2}{\omega \omega_{ce}} = \frac{c^2 k^2}{\omega ^2} \cos \theta
+{{< /katex >}}
+{{< katex display >}}
+\omega = \frac{k^2 c^2 \omega_{ce} \cos \theta}{\omega_{pe}^2}
+{{< /katex >}}
+
+If \\( \theta = 0 \\) (parallel propagation), then this is the generic R-wave propagation.
+
+The angle for the group's velocity is given by
+
+{{< katex display >}}
+\tan \alpha = \frac{\frac{1}{k} \pdv{\omega}{\theta}_k}{\pdv{\omega}{k}_\theta} = \frac{- k c^2 \omega_{ce} \sin \theta / \omega_{pe}^2}{2 k c^2 \omega_{ce} \cos \theta / \omega_{pe}^2} = - \frac{1}{2} \tan \theta
+{{< /katex >}}
+
+This tells us that \\( \alpha \\) is negative, so the direction of the group velocity \\( \vec v_g \\) always lies between \\( \vec B \\) and \\( \vec v_\phi \\). The angle between \\( \vec B \\) and \\( \vec v_g \\) is then
+
+{{< katex display >}}
+\tan (\theta + \alpha) = \frac{\tan \theta + \tan \alpha}{1 - \tan \theta \tan \alpha} =  \frac{\tan \theta}{2 + \tan ^2 \theta}
+{{< /katex >}}
+
+We can find the maximum angle \\( \theta + \alpha \\) between the group velocity and \\( \vec B \\) by differentiating, to find that the maximum angle is when \\( \tan ^2 \theta = 2 \\), so
+
+{{< katex display >}}
+\tan (\theta + \alpha)_{max} = \frac{\tan \theta}{2 + \tan ^2 \theta} = \frac{\sqrt{2}}{2 + 2} = \frac{1}{\sqrt{8}}
+{{< /katex >}}
+{{< katex display >}}
+(\theta + \alpha)_{max} = \tan ^{-1} \frac{1}{\sqrt{8}} = 19.5 ^{\circ}
+{{< /katex >}}
+
+This means that there is a 19-degree cone of propagation around the direction of \\( \vec B \\) where whistler modes can propagate.
+
+## Faraday Rotation
+
+A linearly-polarized electromagnetic wave can be written as a sum of left-handed and right-handed circularly polarized waves.
+
+{{< katex display >}}
+E_R = (E_{Rx}, E_{Ry}) = \hat E(e^{i \theta}, e^{i \theta} e^{i \pi / 2}) = \hat E e^{i \theta} (1, i)
+{{< /katex >}}
+{{< katex display >}}
+E_L = (E_{Lx}, E_{Ly}) = \hat E(e^{i \theta}, e^{i \theta} e^{-i \pi / 2}) = \hat E e^{i \theta}(1, -i)
+{{< /katex >}}
+
+{{< katex display >}}
+E_R + E_L = \hat E e^{i \theta} [(1, i) + (1, -i)] = \hat E e^{i \theta}(2, 0)
+{{< /katex >}}
+
+This is a useful decomposition when we consider linearly polarized light propagating in a magnetized medium, because in a plasma the left- and right-handed polarized components are Faraday rotated in different directions, and a phase difference adds up as the wave propagates through a plasma.
+
+For a wave propagating through a magnetized plasma parallel to the magnetic field (\\( \theta = 0 \\)), the Faraday rotation caused by the difference in refractive index between the R- and L-wave modes.
+
+Let's work out the math to see how that happens. Writing out the Fourier representation of our superposition:
+{{< katex display >}}
+E_R = \hat E e^{i (k_R z - \omega t)} \qquad E_L = \hat E e^{i (k_L z - \omega t)}
+{{< /katex >}}
+{{< katex display >}}
+E = E_R + E_L
+{{< /katex >}}
+{{< katex display >}}
+\text{Re}(E) = \hat {E} [\cos \phi_R + \cos \phi_L]
+{{< /katex >}}
+{{< katex display >}}
+= \hat E \left[2 \cos \frac{\Delta \phi}{2} \cos \frac{\overline{\phi}}{2} \right]
+{{< /katex >}}
+
+where \\( \phi_R = k_R z - \omega t \\), \\( \phi_L = k_L z - \omega t \\), \\( \Delta \phi = \phi_R - \phi_L \\), and \\( \overline{\phi} = \frac{\phi_R + \phi_L}{2} \\)
+
+
+{{< katex display >}}
+\pdv{}{z} (\Delta \phi) = \pdv{}{z} \left( \frac{\omega}{c} \frac{(n_L - n_R)}{2} z \right)
+{{< /katex >}}
+{{< katex display >}}
+ = \frac{\omega}{2c} \Delta n
+{{< /katex >}}
+
+For high-frequency waves, the refractive index difference between left- and right-handed modes is
+
+{{< katex display >}}
+\Delta n = \frac{\omega_{pe}^2}{\omega ^2} \frac{\omega_{ce}}{\omega}
+{{< /katex >}}
+{{< katex display >}}
+\pdv{\Delta \phi}{z} = \frac{1}{2c} \frac{\omega_{pe}^2 \omega_{ce}}{\omega ^2} \propto \lambda ^2 n_e B_0
+{{< /katex >}}
+
+The amount of polarization rotation (chord-integrated along the length of propagation) of a laser of known frequency gives a measurement of the product \\( n_e B_0 \\). If you know one, and \\( B \\) is high enough, you can find the other from Faraday rotation.
+
+## Plasma Interferometry
+
+We can measure the plasma density by transmitting O-waves through the plasma, and measuring the resulting phase change.
+
+We transmit some signal through the plasma \\( S_p = A_p e^{i (\phi_p - \omega t)} \\)
+
+and also send a reference signal to the same receiver
+
+{{< katex display >}}
+S_R = A_R e^{i (\phi _R - \omega t)}
+{{< /katex >}}
+
+We add the resulting beams and measure the signal \\( S \\):
+
+{{< katex display >}}
+S = S_P + S_R = A _P e^{i \phi_P} e^{- i \omega t} + A_R e^{i (\phi _R - \omega t)}
+{{< /katex >}}
+
+{{< katex display >}}
+= (A_p e^{i \phi_P } + A_R e^{i \phi_R}) e^{-i \omega t}
+{{< /katex >}}
+
+In vacuum, we set \\( S = 0 \\) by matching the phases of the reference and transmitted signals with \\( A_P = - A_R = A \\) and \\( \phi_P = \phi_0 = \phi_R \\)
+
+Now, if we have a plasma, the phase change 
+
+{{< katex display >}}
+\Delta \phi(t) = \int _0 ^L k_z (z, t) \dd z - \int _0 ^L k_0 \dd z
+{{< /katex >}}
+{{< katex display >}}
+= \frac{\omega}{c} \int _0 ^L (n - 1) \dd z
+{{< /katex >}}
+
+Within the plasma, \\( n^2 = n_O ^2 = P = 1 - \frac{\omega_p ^2}{\omega ^2} \\)
+
+{{< katex display >}}
+\Delta \phi (t) = \frac{\omega}{c} \int_0 ^L \left[ \sqrt{1 - \frac{\omega_p ^2}{\omega ^2}} - 1 \right] \dd z
+{{< /katex >}}
+
+At the detector, we measure
+
+{{< katex display >}}
+S = A (e^{i \Delta \phi} - 1) e^{i (\phi_0 - \omega t)}
+{{< /katex >}}
+{{< katex display >}}
+= 2 i \sin \frac{\Delta \phi}{2} e^{i \Delta \phi / 2} e^{i (\phi_0 - \omega t)}
+{{< /katex >}}
+
+The actual measurement we're going to be able to get our of our instrument is the energy deposited by the signal, which is \\( |S^2| \\)
+
+{{< katex display >}}
+|S|^2 = 4 A^2 \sin ^2 \frac{\Delta \phi}{2}
+{{< /katex >}}
+
+### High-Frequency Interferometry
+
+When the wave frequency is much higher than the plasma frequency, which the usual case when either optical or infrared waves are used, then we can expand the square root
+
+{{< katex display >}}
+\sqrt{1 - \frac{\omega_p ^2}{\omega ^2}} \approx 1 - \frac{1}{2} \frac{\omega_p ^2}{\omega ^2}
+{{< /katex >}}
+
+{{< katex display >}}
+\Delta \phi = - \frac{\omega}{c} \int _{0} ^{L} (1 - \frac{1}{2} \frac{\omega_p ^2}{\omega ^2} - 1) \dd z
+{{< /katex >}}
+{{< katex display >}}
+ = - \frac{1}{2 \omega c} \int _0 ^L \omega _p ^2 \dd z \propto n_e \lambda L
+{{< /katex >}}
