Kinetic theory notes

--- a/content/notes/UWAA556/ch02-4.md
+++ b/content/notes/UWAA556/ch02-4.md
@@ -727,7 +727,7 @@ There are three topological possibilities for wave-normal surfaces in the CMA di
 1) \\( v_\phi \neq 0 \\) for all angles \\( \theta \\) (wave exists for all \\( \theta \\)). Then the wave-normal diagram is roughly spherical
 2) \\( P / S < 0> \\), so there is a solution \\( \tan ^2 \theta = - P / S \\). Then the resonance angle defines a cone about the magnetic axis. Propagation will either be allowed everywhere inside the cone, or everywhere outside the cone.
 
-When we talk about locations in the CMA diagram, we usually use the Allis factors \\( X \\) and \\( Y \\)
+When we talk about locations in the CMA diagram, we usually use the Altar-Appleton factors \\( X \\) and \\( Y \\)
 
 {{< katex display >}}
 R = 1 - \frac{X}{Y + \mu} + \frac{X}{Y - 1}
