Loads of kinetic theory notes

--- a/content/notes/UWAA556/ch01-1.md
+++ b/content/notes/UWAA556/ch01-1.md
@@ -343,12 +343,78 @@ The time spectrum of \\( f(t) \\) is
 \hat {f}(\omega) = \int _0 ^\infty f(t) e^{i \omega t} \dd t
 {{< /katex >}}
 
+In general, we use the convention \\( \mathcal{L}(f(t)) = F(s) \\) to denote the Laplace transform of \\( f(t) \\), with an opposite sign convention for \\( s \\) vs \\( i \omega \\) (\\( s = - i \omega \\)):
+
+{{< katex display >}}
+F(s) = \int _{0} ^{\infty} e^{-s t} f(t) \dd t
+{{< /katex >}}
+
 with inverse transform
 {{< katex display >}}
 f(t) = \frac{1}{2 \pi} \int _{-\infty + i s} ^{\infty + i s} f(\omega) e ^{- i \omega t} \dd \omega
 {{< /katex >}}
+or
+{{< katex display >}}
+f(t) = \mathcal{L}^{-1}[F(s)] = \frac{1}{2 \pi i} \int _{-\infty +is} ^{\infty + is} e^{st} F(s) \dd s  
+{{< /katex >}}
 
-The inverse Laplace integral is an integral over the complex plane. The factor \\( i s \\) is there in order for the transform pair to be convergent. Contour \\( i s \\) has to be above all of the poles of \\( f(\omega) \\).
+
+Because \\( s \\) is complex-valued, the inverse Laplace integral is an integral over the complex plane. The factor \\( i s \\) is there in order for the transform pair to be convergent. Contour \\( i s \\) has to be above all of the poles of \\( f(\omega) \\). In practice, we compute the complex integral using the Cauchy integral theorem, which says that for any simple closed curve \\( C \\) in the complex plane, then for any \\( z_0 \\) inside \\( C \\):
+
+{{< katex display >}}
+\oint _C \frac{f(z)}{z - z_0} \dd z = 2 \pi i f(z_0)
+{{< /katex >}}
+
+if \\( f(z) \\) is an analytic function (without poles) everywhere inside the closed contour \\( C \\) (which is traversed in the counterclockwise direction). Since the path integral of an analytic function is independent of the path, we may deform paths to suit ourselves unless they encounter a pole, in which case the Cauchy integral theorem tells us that the contribution from circumnavigating the pole is given by the _residue_ of the poles:
+
+{{< katex display >}}
+\oint _C F(z) \dd z = 2 \pi i \sum_k \text{res} _k
+{{< /katex >}}
+
+where the residue of a simple pole (a pole with the form \\( 1/(z - z_k) \\)) is
+{{< katex display >}}
+\text{res}_k = \lim _{z \rightarrow z_k} (z - z_k) F(z)
+{{< /katex >}}
+
+In general, if \\( g(z) \\) is a polynomial function with roots \\( z_j \\) of degree \\( D_j \\), the **residue** of a function \\( f(z)/g(z) \\) at root \\( z_j \\) of \\( g \\) is:
+
+{{< katex display >}}
+\text{res}(z_j) = \lim_{z \rightarrow z_j} \frac{1}{(D_j - 1)!} \frac{\dd ^{D_j - 1}}{\dd z^{D_j - 1}} (z - z_j)^{D_j} \frac{f(z)}{g(z)}
+{{< /katex >}}
+
+{{< tabs "" >}}
+{{< tab "Q" >}}
+
+**Example: Inverse Laplace Transform with Cauchy Residue**
+
+For example, compute the inverse Laplace transform of
+
+{{< katex display >}}
+F(s) = \frac{1}{(s + 1)^2}
+{{< /katex >}}
+
+using the Cauchy residue formula
+
+{{< /tab >}}
+{{< tab "A" >}}
+
+
+{{< katex display >}}
+\mathcal{L}^{-1}[F(s)] = \frac{1}{2 \pi i} \int _{-\infty} ^{\infty} F(s) e^{st} \dd s \\
+= \frac{1}{2 \pi i} \left[ 2 \pi i \sum_k \text{res}_k \left( F(s) e^{st} \right) \right]
+{{< /katex >}}
+
+In this case, \\( F(s) \\) has a single pole of degree 2 at \\( s = -1 \\). The residue of \\( F(s) e^{st} \\) at \\( s = -1 \\) is
+
+{{< katex display >}}
+\text{res}(-1) = \lim_{s \rightarrow -1} \frac{1}{(1)!} \dv{}{s} \left[(s + 1)^2 \frac{e^{st}}{(s+1)^2} \right] \\
+= \lim_{s \rightarrow -1} t e^{st} \\
+= t e^{-t}
+{{< /katex >}}
+
+{{< /tab >}}
+{{< /tabs >}}
+
 
 ## Important Fourier Transforms
 
