--- a/content/notes/UWAA556/ch03-1.md
+++ b/content/notes/UWAA556/ch03-1.md
@@ -52,9 +52,19 @@ The temperature \\( T_{e} \\) determines the spread of the distribution.
 
 The distribution function \\( f(\vec x, \vec v, t) \\) needs to satisfy the Boltzmann equation for conservation in phase space. This is just a statement of conservation of particles
 
+
+### Boltzmann Equation
+
+{{< hint info >}}
+
+**Boltzmann Equation**
+
 {{< katex display >}}
 \dv{}{t} f(\vec x, \vec v, t) = \pdv{f}{t} + \vec v \cdot \grad f + \frac{\vec F}{m} \cdot \pdv{f}{\vec v} = \left( \dv{f}{t} \right)_C
 {{< /katex >}}
+
+{{< /hint >}}
+
 
 where \\( \vec F / m \\) is simply the time change of velocity itself
 
@@ -133,123 +143,3 @@ The full set of "Vlasov equations" includes the Maxwell equations to complete th
 {{< /katex >}}
 
 What does setting the correlation term \\( \left( \dv{f}{t} \right)_C \\) to zero? The left-hand-side of the Boltzmann equation is just the total derivative of the distribution function in phase space, so we have just assumed that \\( f \\) is constant in phase space.
-
-## Waves in Thermal, Unmagnetized Plasma using Vlasov Equations
-
-In a uniform plasma with \\( T > 0 \\), \\( \vec E_0 = \vec B_0 = 0 \\) and equilibrium distribution function \\( f_0 (\vec v) \\), a perturbation in \\( f(\vec x, \vec v, t) \\) can be written as
-
-{{< katex display >}}
-f(\vec x, \vec v, t) = f_0( \vec v) + f_1 (\vec x, \vec v , t) 
-{{< /katex >}}
-
-Linearized Vlasov equation is
-
-{{< katex display >}}
-\pdv{f_1}{t} + \vec v \cdot \grad f_1 - \frac{e}{m} \vec E_1 \cdot \pdv{f_0}{ \vec v} = 0
-{{< /katex >}}
-
-Assuming high ion inertia and that the waves are plane waves in the \\( \vu{x} \\) direction
-
-{{< katex display >}}
-f_1 = \hat f_1 e^{i (kx - \omega t)}
-{{< /katex >}}
-
-Fourier transform to get
-
-{{< katex display >}}
--i \omega f_1 + i k v_x f_1 - \frac{e}{m} E_x \pdv{f_0}{v_x} = 0
-{{< /katex >}}
-
-{{< katex display >}}
-f_1 = \frac{i e E_x}{m} \frac{\pdv{f_0}{v_x}}{\omega - k v_x}
-{{< /katex >}}
-
-What's the electric field? We go ask Maxwell
-
-{{< katex display >}}
-\epsilon_0 \div \vec E_1 = - e n_1 = - e \int f_1 \dd ^3 v
-{{< /katex >}}
-
-Applying Fourier transform, we also assume an electrostatic form of the solution. That is, the wave is propagating along the x-direction, and the electric field also only varies in the x-direction.
-
-{{< katex display >}}
-i k \epsilon_0 E_x = -e \int f_1 \dd ^3 v
-{{< /katex >}}
-
-and substituting our expression for \\( f_1 \\), we arrive at our dispersion relation:
-
-{{< katex display >}}
-D(\omega, k) = 1 + \frac{e^2}{k m \epsilon_0} \int \frac{\partial f_0 / \partial v_x}{\omega - k v_x} \dd ^3 v = 0
-{{< /katex >}}
-
-We can back out the background density from the distribution function, leaving us with the first moment of the normalized distribution function \\( \hat f_0(v) \\)
-
-{{< katex display >}}
-n_0 = \int f_0 \dd \vec v = n_0 \int \hat f_0 \dd v
-{{< /katex >}}
-
-{{< katex display >}}
-D(\omega, k) = 1 - \frac{\omega_p ^2}{k^2} \int \frac{\partial \hat f_0 / \partial v_x}{v_x - (\omega / k)}
-{{< /katex >}}
-
-Electrostatic dispersion relation is not easily solved. Note that if \\( v_x = v_\phi = \omega / k \\), the integral has a singularity. But, the integral only carries a singularity if \\( \omega / k \\) is not complex. If \\( \omega = \omega_r + i \omega _i \\) with \\( \omega_i \neq 0 \\), the singularity is no longer a problem.
-
-Vlasov's approach is to ignore \\( \omega_i \\) and the singularity at \\( v_\phi = \omega /k \\) by considering only the Cauchy principal value of the integral.
-
-It's easier to examine the case when the phase velocity is much greater than the thermal velocity. If we take a small gap of size \\( 2 \epsilon \\) out of \\( v_x \\) near \\( v_\phi \\), the contribution from \\( \partial \hat f_0 / \partial v_x \\) is vanishingly small. Expanding the integral by parts,
-
-{{< katex display >}}
-\int _{-\infty} ^{\infty} \frac{\partial \hat f_0 / \partial v_x}{v_x - v_\phi} \dd v = \\
- \lim _{\epsilon \rightarrow 0} \left[ \left. \frac{\hat f_0}{v_x - v_\phi} \right|_{- \infty} ^{v_\phi - \epsilon} - \int _{- \infty} ^{v_\phi - \epsilon} - \frac{\hat f_0 \dd v_x}{(v_x - v_\phi)^2} + \left. \frac{\hat f_0}{v _x - v_\phi} \right|_{v_\phi + \epsilon} ^\infty - \int _{v_\phi + \epsilon} ^\infty \frac{\hat f_0 \dd v_x}{(v_x - v_\phi)^2}  \right] \\
- = \lim _{\epsilon \rightarrow 0} \left[ - \int _{- \infty} ^{v_\phi - \epsilon} - \frac{\hat f_0 \dd v_x}{(v_x - v_\phi)^2} - \int _{v_\phi + \epsilon} ^\infty \frac{\hat f_0 \dd v_x}{(v_x - v_\phi)^2} \right] \\
- \equiv \sout{\int} _{-\infty} ^\infty \frac{\hat f_0 \dd v_x }{(v_x - v_\phi)^2}
-{{< /katex >}}
-
-where we define the integral excluding \\( v_\phi \pm \epsilon \\) to be \\( \sout{\int}_{-\infty} ^{\infty} \\). 
-
-{{< katex display >}}
-D(\omega, k) = 1 - \frac{\omega_p ^2}{k ^2} \sout{\int} _{-\infty} ^{\infty} \frac{\partial \hat f_0 / \partial v_x}{v_x - (\omega / k)} \dd v_x \\
-= 1 - \frac{\omega_p ^2}{k ^2} \sout{\int} _{-\infty} ^{\infty} \frac{\hat f_0 \dd v_x}{(v_x - v_\phi)^2}
-{{< /katex >}}
-
-Assuming \\( v_\phi \gg v_x \\), then
-
-{{< katex display >}}
-\frac{1}{(v_x - v_\phi)^2} = \frac{1}{\left[- v_\phi(1 - v_x / v_\phi) \right]^2} \\
-= \frac{1}{v_\phi ^2} (1 - \frac{v_x}{v_\phi})^{-2} \\
-= \frac{1}{v_\phi ^2} \left( 1 + 2 \frac{v_x}{v_\phi} + 3 \frac{v_x ^2}{v_\phi ^2} + \ldots \right)
-{{< /katex >}}
-
-Then
-
-{{< katex display >}}
-D(\omega, k) = 1 - \frac{\omega_p ^2}{\frac{\omega ^2}{k^2} k^2} \left[ \sout{\int} _{-\infty} ^{\infty} \hat f_0 \dd v_x + \frac{2}{v_\phi} \sout{\int} _{-\infty} ^{\infty} v_x \hat f_0 \dd v_x + \frac{3}{v_\phi ^2} \sout{\int} _{-\infty} ^{\infty} v_x ^2 \hat f_0 \dd v_x + \ldots \right]
-{{< /katex >}}
-
-Because \\( v_x \hat f_0 \\) is an odd function,
-
-{{< katex display >}}
-\sout{\int} _{-\infty} ^{\infty} v_x \hat f_0 \dd x \approx \int _{-\infty} ^{\infty} v_x \hat f_0 \dd x = 0
-{{< /katex >}}
-
-{{< katex display >}}
-\sout{\int} _{-\infty} ^{\infty} \hat f_0 \dd v_x \approx \int _{-\infty} ^{\infty} \hat f_0 \dd v_x = 1
-{{< /katex >}}
-{{< katex display >}}
-\int _{-\infty} ^{\infty} v_x ^2 \hat f_0 \dd v_x = \langle v_x ^2 \rangle
-{{< /katex >}}
-
-
-{{< katex display >}}
-\rightarrow D(\omega, k) = 1 - \frac{\omega_p ^2}{\omega ^2} \left[ 1 + \frac{3 \langle v_x ^2 \rangle}{v_\phi ^2} \right] = 0
-{{< /katex >}}
-
-If \\( T = 0 \\) then \\( \langle v_x ^2 \rangle = 0 \\) then \\( D(\omega, k) = 0 \\) and \\( \omega ^2 = \omega _p ^2 \\) which is the cold plasma electrostatic dispersion relation. So we can think of the second term as a thermal correction to the electrostatic cold plasma dispersion relation.
-
-If \\( \omega \approx \omega_p \\) and noting that \\( \langle v_x ^2 \rangle = v_t ^2 \\), then
-
-{{< katex display >}}
-\omega ^2 = \omega _p ^2 + 3 k ^2 v_t^2
-{{< /katex >}}
-
-which is the Bohm-Gross dispersion relation.
