Rename section on waves

--- a/content/notes/UWAA556/ch03-2.md
+++ b/content/notes/UWAA556/ch03-2.md
@@ -4,6 +4,11 @@ weight: 60
 # bookToc: false
 ---
 
+{{< katex display >}}
+
+{{< /katex >}}
+
+
 # Landau Damping
 
 The electrostatic dispersion relation for a plasma with a non-zero temperature leads to additional terms beyond the \\( \omega^2 - \omega_p ^2 = 0 \\) relation we got before.
@@ -122,7 +127,7 @@ Because \\( v_x \hat f_0 \\) is an odd function,
 
 If \\( T = 0 \\) then \\( \langle v_x ^2 \rangle = 0 \\) then \\( D(\omega, k) = 0 \\) and \\( \omega ^2 = \omega _p ^2 \\) which is the cold plasma electrostatic dispersion relation. So we can think of the second term as a thermal correction to the electrostatic cold plasma dispersion relation.
 
-If \\( \omega \approx \omega_p \\) and noting that \\( \langle v_x ^2 \rangle = v_t ^2 \\), then
+If the thermal correction is small, that is \\( \frac{3 \langle v_x ^2 \rangle}{v_\phi ^2} \ll 1 \\), then \\( \omega \approx \omega_p \\) and noting that \\( \langle v_x ^2 \rangle = v_t ^2 \\) we have
 
 {{< katex display >}}
 \omega ^2 = \omega _p ^2 + 3 k ^2 v_t^2
@@ -263,11 +268,41 @@ where \\( C_2 \\) is a contour in the lower half-plane that excludes \\( s_1 \\)
 = - \frac{\pi i}{k} \left.\pdv{f_0}{v_x}\right|_{v_x = \omega / k}
 {{< /katex >}}
 
+
+{{< hint info >}}
+
+**Warm Plasma Dispersion Relation**
+
+
 {{< katex display >}}
 \epsilon(\omega, k) = \underbrace{1 + \frac{\omega_p ^2}{k} \left[ \sout{\int} _{-\infty} ^{\infty} \frac{\partial f_0 / \partial v_x}{\omega - k v_x} \dd v_x \right.}_{\text{Vlasov's solution}} \underbrace{\left. - \frac{i \pi}{k} \left. \pdv{f_0}{v_x} \right|_{v_x = \omega / k} \right]}_{\text{Landau damping}}
 {{< /katex >}}
 
-For comparison with the cold plasma dispersion relation,
+{{< /hint >}}
+
+
+We can evaluate the integral by parts:
+
+{{< katex display >}}
+\int _{-\infty} ^{\infty} \pdv{f_0}{v_x} \frac{\dd v_x}{\omega - k v_x} = \left. \frac{f_0}{\omega - k v_x} \right|_{- \infty} ^{\infty} - \frac{1}{k} \int _{-\infty} ^{\infty} \frac{- f_0 \dd v_x }{(v - v_\phi)^2} = \frac{1}{k}\int _{-\infty} ^{\infty} \frac{- f_0 \dd v_x }{(v_x - v_\phi)^2}
+{{< /katex >}}
+
+If \\( v_\phi \gg v_x \\) we can expand \\( (v_x - v_\phi)^{-2} \\)
+
+{{< katex display >}}
+(v_x - v_\phi)^{-2} = v_\phi ^{-2} \left( 1 - \frac{v_x}{v_\phi} \right)^{-2} \\
+= v_\phi ^{-2} \left(1 + \frac{2 v_x}{v_\phi} + \frac{3 v_x ^2}{v_\phi ^2} + \frac{4 v_x ^3}{v_\phi ^3} + \ldots \right)
+{{< /katex >}}
+
+When taking the average over the distribution, the odd terms vanish. The average of \\( f_0 v_x ^2 \\) is just the thermal velocity \\( v_t ^2 \\):
+
+{{< katex display >}}
+\int _{-\infty} ^{\infty} f_0 v_x ^2 \dd v_x \equiv v_t ^2
+{{< /katex >}}
+
+{{< katex display >}}
+\rightarrow \frac{\omega_p ^2}{k} \sout{\int} _{-\infty} ^{\infty} \frac{\partial f_0 / \partial v_x}{\omega - k v_x} \dd v_x \approx - \frac{\omega_p ^2}{\omega^2} \left( 1 + \frac{3 v_t ^2}{v_\phi ^2} \right)
+{{< /katex >}}
 
 {{< katex display >}}
 D(k, \omega) = \underbrace{\left. 1 - \frac{\omega_{pe}^2}{\omega ^2} \right( 1}_{\text{CDPR}} \underbrace{\left. + \frac{3 v_t ^2}{v_\phi ^2} \right)}_{\text{Fluid Bohm-Gross}} \underbrace{\left. - \frac{i \pi \omega_{pe}^2}{k^2} \left.\pdv{f_0}{v_x} \right|_{v_x = \omega / k} \right.}_{\text{Kinetic description}} = 0
@@ -428,28 +463,3 @@ i \pi \frac{\omega_{pe}^2}{k^2} \left. \pdv{f_{0e}}{v_x} \right|_{v_x = \omega /
 {{< /katex >}}
 
 The electron contribution to \\( \text{Im}[\omega] \\) can switch sign from negative to positive, depending on the difference between \\( v_\phi \\) and \\( v_e \\). Setting the imaginary term in \\( \epsilon(k, \omega) = 0 \\) gives a threshold for the onset of ion acoustic turbulence (current-driven instability).
-
-# Waves in Hot Magnetized Plasma
-
-Just like in the cold plasma dispersion relation, finding the dielectric tensor helps with the dispersion relation. The process involves multiple steps. We will only look at the overview here.
-
-The process utilizes the method of characteristics, where the perturbation of \\( f(\vec v) \\) due to the wave is found by integrating along unperturbed orbits. Note: the orbits will be spirals, \\( \vec R(t) = \vec R(\vec x(t), \vec v(t), t) \\). The steps of the process are:
-
-- Calculate \\( \left. \dv{f}{t} \right|_{\vec R} \\) which is the change in the distribution function along this trajectory.
-- Linearize the evolution equation with \\( \vec E = \vec E_1 \\) and \\( \vec B = \vec B_0 + \vec B_1 \\)
-- Express the perturbations as Fourier expansions
-- Integrate the equation of motion for the particles, and get expressions for the particl velocity
-- Calculate \\( \vec J = q \int \vec v f_1 \dd \vec v \\)
-- Use \\( \vec J = \vec \sigma \cdot \vec E \\) and \\( \vec \epsilon = \vec \epsilon_b + i \vec \sigma / \omega \\) to construct the effective dielectric tensor \\( \vec K = \vec \epsilon / \epsilon_0 \\)
-
-We will, as usual, use a coordinate system such that \\( \vec B_0 = B_0 \vu z \\). We define \\( \psi \\) to be the angle made by \\( \vec k \\) in the x-y plane:
-
-{{< katex display >}}
-\vec B_0 = B_0 \vu z
-{{< /katex >}}
-{{< katex display >}}
-k_\perp ^2 = k_x ^2 + k_y ^2
-{{< /katex >}}
-{{< katex display >}}
-k_x = k_\perp \cos \psi \qquad k_y = k _\perp \sin \psi
-{{< /katex >}}
