Notes from the past few days

--- a/content/notes/UWAA556/ch03-3.md
+++ b/content/notes/UWAA556/ch03-3.md
@@ -33,3 +33,144 @@ k_\perp ^2 = k_x ^2 + k_y ^2
 k_x = k_\perp \cos \psi \qquad k_y = k _\perp \sin \psi
 {{< /katex >}}
 
+The form of the effective dielectric tensor (from Swanson) is:
+
+{{< katex display >}}
+\vec K = \begin{bmatrix}
+K_1 + \sin^2 \psi K_0 & K_2 - \cos \psi \sin \psi K_0  &  \cos \psi K_4 + \sin \psi K_5 \\
+-K_2 - \cos \psi \sin \psi K_0  &  K_1 + \cos ^2 \psi K_0  &  \sin \psi K_4 - \cos \psi K_5 \\
+\cos \psi K_6 - \sin \psi K_7  &  \sin \psi K_6 + \cos \psi K_7  &  K_3
+\end{bmatrix}
+{{< /katex >}}
+
+where the dielectric coefficients \\( K_j \\) can be found in the text.
+
+Recall that the wave equation
+
+{{< katex display >}}
+\vec n \cross (\vec n \cross \vec E) + \frac{\vec \epsilon}{\epsilon_0} \cdot \vec E = 0
+{{< /katex >}}
+
+is still valid. For \\( \vec k = k_x \vu x + k_y \vu y \\) this is:
+
+{{< katex display >}}
+\begin{bmatrix}
+\kappa_{xx} - k_z ^2 - k_y ^2  & \kappa_{xy} + k_x k_y  &  \kappa_{xz} + k_x k_z \\
+\kappa_{yx} + k_y k_x  &  \kappa_{yy} + k_z ^2 - k_x ^2  &  \kappa_{yz} + k_x k_z \\
+\kappa_{zx} + k_z k_x  &  \kappa_{zy} + k_z k_y  &  \kappa_{zz} - k_{\perp}^2
+\end{bmatrix}
+
+\begin{bmatrix}
+E_x \\E_y \\E_z
+\end{bmatrix} = 0
+{{< /katex >}}
+
+where \\( \kappa_{ij} \equiv (\omega^2 / c^2)K_{ij} \\). The dispersion relation is obtained by setting the determinant of the matrix to zero. The dispersion relation may be written either in terms of dimensionless quantities \\( K_{ij}, n_x, n_y, n_z \\) or in terms of \\( \kappa_{ij}, k_x, k_y, k_z \\) as is convenient.
+
+If we define \\( \gamma \equiv k_z ^2 - \kappa_1 \\) then the dispersion relation can be written:
+
+{{< katex display >}}
+\begin{aligned}
+0 & = \kappa_3 \left[ \gamma (\gamma - \kappa_0 + k_\perp ^2) + \kappa_2 ^2 \right] \\
+& \quad + k_\perp ^2 \left[(\gamma - \kappa_0 + k_\perp ^2)\kappa _1 - \kappa_2 ^2 \right] \\
+& \quad + \kappa_4 (\gamma - \kappa_0 + k_\perp ^2)(2 k_\perp k_z + \kappa_4) \\
+& \quad - \kappa_5 \left[\gamma \kappa_5 + 2 \kappa_2(k_\perp k_z + \kappa_4)\right]
+\end{aligned}
+{{< /katex >}}
+
+## Kinetic Effects on R-wave
+
+For parallel propagation, \\( k_\perp = \lambda = 0 \\) and the tensor elements simplify since the infinite sums reduce to either one or two terms. Additionally, we find that \\( K_0 = K_4 = K_5 = 0 \\), so the dispersion relation is
+
+{{< katex display >}}
+(\gamma ^2 + \kappa _2 ^2) \kappa_3 = 0
+{{< /katex >}}
+
+The solutions are \\( \kappa_3 = 0 \\) and \\( k_z ^2 = \kappa _1 \pm \kappa_2 \\). The first solution is unaffected by the magnetic field, and is identical to the ion-acoustic wave dispersion relation. This is the equivalent of the O-wave in the cold plasma dispersion relation.
+
+The other two roots are the R- and L-waves, whose dispersion relation is:
+
+{{< katex display >}}
+\begin{aligned}
+n_{R,L}^2 & = K_1 \pm i K_2 \\
+& = 1 + \sum_j \frac{\omega_{pj}^2}{\omega k_z v_{lj}} \left[Z_{1j}\left( \frac{1 \pm \epsilon_j}{2} \right) + Z_{-1j} \left(\frac{1 \mp \epsilon_j}{2}\right)\right]
+\end{aligned}
+{{< /katex >}}
+
+where
+
+{{< katex display >}}
+Z_{\pm1} = \left( 1 - \frac{k_z - v_0}{\omega}\right) Z(\zeta_{\pm 1}) + \frac{k_z v_l}{2 \omega} \left( 1 - \frac{T_\perp}{T_\parallel} \right) Z^\prime (\zeta_{\pm 1})
+{{< /katex >}}
+{{< katex display >}}
+v_0 \equiv \text{drift velocity}
+{{< /katex >}}
+{{< katex display >}}
+v_l ^2 = \frac{2 k_B T_\parallel}{m} \equiv \text{longitudinal thermal speed}
+{{< /katex >}}
+{{< katex display >}}
+Z(\zeta) = \frac{1}{\sqrt{\pi}} \int _{-\infty} ^{\infty} \frac{e^{-x^2}}{x - \zeta} \dd x \quad \text{(Plasma dispersion function)}
+{{< /katex >}}
+{{< katex display >}}
+\epsilon_j \equiv q_j / |q_j|
+{{< /katex >}}
+{{< katex display >}}
+\zeta_{\pm j} = \frac{\omega \pm \omega_{cj} - k_z v_0}{k_z v_{lj}}
+{{< /katex >}}
+
+With no drift (\\( v_0 = 0 \\)) and isotropic temperature (\\( T_\perp = T_\parallel \\)):
+
+{{< katex display >}}
+n_R ^2 = 1 + \frac{\omega_{pe}^2}{\omega k_z v_{le}}Z_{-1 e} + \frac{\omega_{pi}^2}{\omega k_z v_{li}} Z_{+1i}
+{{< /katex >}}
+
+For large values of \\( \omega /k_z v_{li} \\), 
+
+{{< katex display >}}
+Z_{+1i} = Z(\zeta_{+1i}) = Z\left( \frac{\omega + \omega_{ci}}{k_z v_{li}} \right) \approx 0
+{{< /katex >}}
+
+And at the electron cyclotron resonance, \\( \omega = \omega_{ce} \rightarrow \zeta_{-1e} = 0 \\) so \\( Z_{-1e} = i \sqrt{\pi} \\)
+{{< katex display >}}
+\rightarrow n_R ^2 = 1 + i \sqrt{\pi} \frac{\omega_{pe}^2}{\omega k_z v_{le}}
+{{< /katex >}}
+
+Slightly away from resonance, for weak damping \\( |\omega_i| \ll |\omega_r|  \\):
+
+{{< katex display >}}
+\frac{\omega_i}{\omega_r} \sim \frac{\sqrt{\pi} \omega_{pe}^2}{\omega_r k_z v_e \left[ 2 + \frac{\omega_{pe}^2\omega_{ce}}{\omega_r (\omega_r - \omega_{ce})^2}\right]} \exp\left[ - \left( \frac{\omega_r - \omega_{ce}}{k_z v_x} \right)^2 \right]
+{{< /katex >}}
+
+The damping shrinks exponentially away from resonance, but the denominator also grows. Far enough away from resonance, the growing denominator would break the \\( |\omega_i| / |\omega_r| \ll 1 \\) condition. Away from resonance, we do see weak damping, and the cold plasma dispersion relation is valid.
+
+Expanding to higher order in \\( Z(\zeta_{-1e}) \\):
+
+{{< katex display >}}
+\textcolor{cadetblue}{n_R ^2 = 1} \textcolor{darkgoldenrod}{- \frac{\omega_{pe}^2}{\omega (\omega - \omega_{ce})}} \left[\textcolor{darkgoldenrod}{1} + \textcolor{darkviolet}{\frac{k_z ^2 v_e ^2}{2(\omega - \omega_{ce})^2}}\right] + \textcolor{tomato}{\frac{i \sqrt{\pi} \omega_{pe}^2}{\omega k_z v_e} \exp\left[- \left( \frac{\omega - \omega_{ce}}{k_z v_e} \right)^2 \right]}
+{{< /katex >}}
+{{< katex display >}}
+\textcolor{cadetblue}{\text{EM waves in vacuum}}
+{{< /katex >}}
+{{< katex display >}}
+\textcolor{darkgoldenrod}{\text{Cold Plasma Dispersion Relation}}
+{{< /katex >}}
+{{< katex display >}}
+\textcolor{darkviolet}{\text{Fluid Warm Plasma Dispersion Relation}}
+{{< /katex >}}
+{{< katex display >}}
+\textcolor{tomato}{\text{Kinetic Model}}
+{{< /katex >}}
+
+
+## Finite Larmor Orbit Effects: Physical Interpretation of Cyclotron Damping
+
+Why does the wave lose energy and the particles gain energy due to cyclotron damping? What is the mechanism of energy transfer between the particles and the exciting wave?
+
+Consider a particle with velocity \\( v_z \\) traveling parallel to the wave with wavenumber \\( k_z \\), and \\( \vec B = B_0 \vu z \\).
+
+For certain values of \\( v_z \\), the particle will traverse an integer number of wavelengths during a cyclotron orbit:
+
+{{< katex display >}}
+\omega - k_z v_z = \pm n \omega_c
+{{< /katex >}}
+
